--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <link rel="stylesheet" href="/venobox.css">
 
   <!-- Main Stylesheet -->
-  <link href="css/style.css" rel="stylesheet">
+  <link href="/style.css" rel="stylesheet">
   
   <!--Favicon-->
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
@@ -66,7 +66,7 @@
   <div class="navigation w-100">
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-light p-0">
-        <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="logo"></a>
+        <a class="navbar-brand" href="index.html"><img src="/logo.png" alt="logo"></a>
         <button class="navbar-toggler rounded-0" type="button" data-toggle="collapse" data-target="#navigation"
           aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -181,7 +181,7 @@
 </div>
 
 <!-- hero slider -->
-<section class="hero-section overlay bg-cover" data-background="images/banner/banner-1.jpg">
+<section class="hero-section overlay bg-cover" data-background="/banner-1.jpg">
   <div class="container">
     <div class="hero-slider">
       <!-- slider item -->
@@ -233,7 +233,7 @@
   <div class="container-fluid p-0">
     <div class="row no-gutters">
       <div class="col-xl-4 col-lg-5 align-self-end">
-        <img class="img-fluid w-100" src="images/banner/banner-feature.png" alt="banner-feature">
+        <img class="img-fluid w-100" src="/banner-feature.png" alt="banner-feature">
       </div>
       <div class="col-xl-8 col-lg-7">
         <div class="row feature-blocks bg-gray justify-content-between">
@@ -279,7 +279,7 @@
         <a href="about.html" class="btn btn-primary-outline">Learn more</a>
       </div>
       <div class="col-md-6 order-1 order-md-2 mb-4 mb-md-0">
-        <img class="img-fluid w-100" src="images/about/about-us.jpg" alt="about image">
+        <img class="img-fluid w-100" src="/about-us.jpg" alt="about image">
       </div>
     </div>
   </div>
@@ -305,7 +305,7 @@
   <!-- course item -->
   <div class="col-lg-4 col-sm-6 mb-5">
     <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/courses/course-1.jpg" alt="course thumb">
+      <img class="card-img-top rounded-0" src="/course-1.jpg" alt="course thumb">
       <div class="card-body">
         <ul class="list-inline mb-2">
           <li class="list-inline-item"><i class="ti-calendar mr-1 text-color"></i>02-14-2018</li>
@@ -323,7 +323,7 @@
   <!-- course item -->
   <div class="col-lg-4 col-sm-6 mb-5">
     <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/courses/course-2.jpg" alt="course thumb">
+      <img class="card-img-top rounded-0" src="/course-2.jpg" alt="course thumb">
       <div class="card-body">
         <ul class="list-inline mb-2">
           <li class="list-inline-item"><i class="ti-calendar mr-1 text-color"></i>02-14-2018</li>
@@ -341,7 +341,7 @@
   <!-- course item -->
   <div class="col-lg-4 col-sm-6 mb-5">
     <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/courses/course-3.jpg" alt="course thumb">
+      <img class="card-img-top rounded-0" src="/course-3.jpg" alt="course thumb">
       <div class="card-body">
         <ul class="list-inline mb-2">
           <li class="list-inline-item"><i class="ti-calendar mr-1 text-color"></i>02-14-2018</li>
@@ -359,7 +359,7 @@
   <!-- course item -->
   <div class="col-lg-4 col-sm-6 mb-5">
     <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/courses/course-4.jpg" alt="course thumb">
+      <img class="card-img-top rounded-0" src="/course-4.jpg" alt="course thumb">
       <div class="card-body">
         <ul class="list-inline mb-2">
           <li class="list-inline-item"><i class="ti-calendar mr-1 text-color"></i>02-14-2018</li>
@@ -377,7 +377,7 @@
   <!-- course item -->
   <div class="col-lg-4 col-sm-6 mb-5">
     <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/courses/course-5.jpg" alt="course thumb">
+      <img class="card-img-top rounded-0" src="/course-5.jpg" alt="course thumb">
       <div class="card-body">
         <ul class="list-inline mb-2">
           <li class="list-inline-item"><i class="ti-calendar mr-1 text-color"></i>02-14-2018</li>
@@ -395,7 +395,7 @@
   <!-- course item -->
   <div class="col-lg-4 col-sm-6 mb-5">
     <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/courses/course-6.jpg" alt="course thumb">
+      <img class="card-img-top rounded-0" src="/course-6.jpg" alt="course thumb">
       <div class="card-body">
         <ul class="list-inline mb-2">
           <li class="list-inline-item"><i class="ti-calendar mr-1 text-color"></i>02-14-2018</li>
@@ -437,7 +437,7 @@
 <!-- /cta -->
 
 <!-- success story -->
-<section class="section bg-cover" data-background="images/backgrounds/success-story.jpg">
+<section class="section bg-cover" data-background="/success-story.jpg">
   <div class="container">
     <div class="row">
       <div class="col-lg-6 col-sm-4 position-relative success-video">
@@ -476,7 +476,7 @@
   <div class="col-lg-4 col-sm-6 mb-5 mb-lg-0">
     <div class="card border-0 rounded-0 hover-shadow">
       <div class="card-img position-relative">
-        <img class="card-img-top rounded-0" src="images/events/event-1.jpg" alt="event thumb">
+        <img class="card-img-top rounded-0" src="/event-1.jpg" alt="event thumb">
         <div class="card-date"><span>18</span><br>December</div>
       </div>
       <div class="card-body">
@@ -490,7 +490,7 @@
   <div class="col-lg-4 col-sm-6 mb-5 mb-lg-0">
     <div class="card border-0 rounded-0 hover-shadow">
       <div class="card-img position-relative">
-        <img class="card-img-top rounded-0" src="images/events/event-2.jpg" alt="event thumb">
+        <img class="card-img-top rounded-0" src="/event-2.jpg" alt="event thumb">
         <div class="card-date"><span>21</span><br>December</div>
       </div>
       <div class="card-body">
@@ -504,7 +504,7 @@
   <div class="col-lg-4 col-sm-6 mb-5 mb-lg-0">
     <div class="card border-0 rounded-0 hover-shadow">
       <div class="card-img position-relative">
-        <img class="card-img-top rounded-0" src="images/events/event-3.jpg" alt="event thumb">
+        <img class="card-img-top rounded-0" src="/event-3.jpg" alt="event thumb">
         <div class="card-date"><span>23</span><br>December</div>
       </div>
       <div class="card-body">
@@ -535,7 +535,7 @@
       <!-- teacher -->
       <div class="col-lg-4 col-sm-6 mb-5 mb-lg-0">
         <div class="card border-0 rounded-0 hover-shadow">
-          <img class="card-img-top rounded-0" src="images/teachers/teacher-1.jpg" alt="teacher">
+          <img class="card-img-top rounded-0" src="/teacher-1.jpg" alt="teacher">
           <div class="card-body">
             <a href="teacher-single.html">
               <h4 class="card-title">Jacke Masito</h4>
@@ -553,7 +553,7 @@
       <!-- teacher -->
       <div class="col-lg-4 col-sm-6 mb-5 mb-lg-0">
         <div class="card border-0 rounded-0 hover-shadow">
-          <img class="card-img-top rounded-0" src="images/teachers/teacher-2.jpg" alt="teacher">
+          <img class="card-img-top rounded-0" src="/teacher-2.jpg" alt="teacher">
           <div class="card-body">
             <a href="teacher-single.html">
               <h4 class="card-title">Clark Malik</h4>
@@ -571,7 +571,7 @@
       <!-- teacher -->
       <div class="col-lg-4 col-sm-6 mb-5 mb-lg-0">
         <div class="card border-0 rounded-0 hover-shadow">
-          <img class="card-img-top rounded-0" src="images/teachers/teacher-3.jpg" alt="teacher">
+          <img class="card-img-top rounded-0" src="/teacher-3.jpg" alt="teacher">
           <div class="card-body">
             <a href="teacher-single.html">
               <h4 class="card-title">John Doe</h4>
@@ -603,7 +603,7 @@
   <!-- blog post -->
   <article class="col-lg-4 col-sm-6 mb-5 mb-lg-0">
     <div class="card rounded-0 border-bottom border-primary border-top-0 border-left-0 border-right-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/blog/post-1.jpg" alt="Post thumb">
+      <img class="card-img-top rounded-0" src="/post-1.jpg" alt="Post thumb">
       <div class="card-body">
         <!-- post meta -->
         <ul class="list-inline mb-3">
@@ -623,7 +623,7 @@
   <!-- blog post -->
   <article class="col-lg-4 col-sm-6 mb-5 mb-lg-0">
     <div class="card rounded-0 border-bottom border-primary border-top-0 border-left-0 border-right-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/blog/post-2.jpg" alt="Post thumb">
+      <img class="card-img-top rounded-0" src="/post-2.jpg" alt="Post thumb">
       <div class="card-body">
         <!-- post meta -->
         <ul class="list-inline mb-3">
@@ -643,7 +643,7 @@
   <!-- blog post -->
   <article class="col-lg-4 col-sm-6 mb-5 mb-lg-0">
     <div class="card rounded-0 border-bottom border-primary border-top-0 border-left-0 border-right-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/blog/post-3.jpg" alt="Post thumb">
+      <img class="card-img-top rounded-0" src="/post-3.jpg" alt="Post thumb">
       <div class="card-body">
         <!-- post meta -->
         <ul class="list-inline mb-3">
@@ -689,7 +689,7 @@
       <div class="row">
         <div class="col-lg-4 col-sm-8 mb-5 mb-lg-0">
           <!-- logo -->
-          <a class="logo-footer" href="index.html"><img class="img-fluid mb-4" src="images/logo.png" alt="logo"></a>
+          <a class="logo-footer" href="index.html"><img class="img-fluid mb-4" src="/logo.png" alt="logo"></a>
           <ul class="list-unstyled">
             <li class="mb-2">23621 15 Mile Rd #C104, Clinton MI, 48035, New York, USA</li>
             <li class="mb-2">+1 (2) 345 6789</li>
