--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Educenter</title>
+  <title>Lord Buddha Academy</title>
 
   <!-- mobile responsive meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,24 +11,24 @@
   
   <!-- ** Plugins Needed for the Project ** -->
   <!-- Bootstrap -->
-  <link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css">
+  <link rel="stylesheet" href="/bootstrap.min.css">
   <!-- slick slider -->
-  <link rel="stylesheet" href="plugins/slick/slick.css">
+  <link rel="stylesheet" href="/slick.css">
   <!-- themefy-icon -->
-  <link rel="stylesheet" href="plugins/themify-icons/themify-icons.css">
+  <link rel="stylesheet" href="/themify-icons.css">
   <!-- animation css -->
-  <link rel="stylesheet" href="plugins/animate/animate.css">
+  <link rel="stylesheet" href="/animate.css">
   <!-- aos -->
-  <link rel="stylesheet" href="plugins/aos/aos.css">
+  <link rel="stylesheet" href="/aos.css">
   <!-- venobox popup -->
-  <link rel="stylesheet" href="plugins/venobox/venobox.css">
+  <link rel="stylesheet" href="/venobox.css">
 
   <!-- Main Stylesheet -->
   <link href="css/style.css" rel="stylesheet">
   
   <!--Favicon-->
-  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="/favicon.ico" type="/x-icon">
+  <link rel="icon" href="/favicon.ico" type="/x-icon">
 
 </head>
 
@@ -181,7 +181,7 @@
 </div>
 
 <!-- page title -->
-<section class="page-title-section overlay" data-background="images/backgrounds/page-title.jpg">
+<section class="page-title-section overlay" data-background="/page-title.jpg">
   <div class="container">
     <div class="row">
       <div class="col-md-8">
@@ -201,7 +201,7 @@
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <img class="img-fluid w-100 mb-4" src="images/about/about-page.jpg" alt="about image">
+        <img class="img-fluid w-100 mb-4" src="/about-page.jpg" alt="about image">
         <h2 class="section-title">ABOUT OUR JOURNY</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.dolore magna aliqua. Ut enim ad minim veniam, quis nostrud. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe ipsa illo quod veritatis, magni debitis fugiat dolore voluptates! Consequatur, aliquid. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat perferendis sint optio similique. Et amet magni facilis vero corporis quos.</p>
         <p>exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum a, facere fugit error accusamus est officiis vero in, nostrum laboriosam corrupti explicabo, cumque repudiandae deleniti perspiciatis quae consectetur enim. Laboriosam!</p>
@@ -249,7 +249,7 @@
 <!-- /funfacts -->
 
 <!-- success story -->
-<section class="section bg-cover" data-background="images/backgrounds/success-story.jpg">
+<section class="section bg-cover" data-background="/success-story.jpg">
   <div class="container">
     <div class="row">
       <div class="col-lg-6 col-sm-4 position-relative success-video">
@@ -279,7 +279,7 @@
         <!-- teacher -->
         <div class="col-lg-4 col-sm-6 mb-5 mb-lg-0">
           <div class="card border-0 rounded-0 hover-shadow">
-            <img class="card-img-top rounded-0" src="images/teachers/teacher-1.jpg" alt="teacher">
+            <img class="card-img-top rounded-0" src="/teacher-1.jpg" alt="teacher">
             <div class="card-body">
               <a href="teacher-single.html">
                 <h4 class="card-title">Jacke Masito</h4>
@@ -299,7 +299,7 @@
         <!-- teacher -->
         <div class="col-lg-4 col-sm-6 mb-5 mb-lg-0">
           <div class="card border-0 rounded-0 hover-shadow">
-            <img class="card-img-top rounded-0" src="images/teachers/teacher-2.jpg" alt="teacher">
+            <img class="card-img-top rounded-0" src="/teacher-2.jpg" alt="teacher">
             <div class="card-body">
               <a href="teacher-single.html">
                 <h4 class="card-title">Clark Malik</h4>
@@ -319,7 +319,7 @@
         <!-- teacher -->
         <div class="col-lg-4 col-sm-6 mb-5 mb-lg-0">
           <div class="card border-0 rounded-0 hover-shadow">
-            <img class="card-img-top rounded-0" src="images/teachers/teacher-3.jpg" alt="teacher">
+            <img class="card-img-top rounded-0" src="/teacher-3.jpg" alt="teacher">
             <div class="card-body">
               <a href="teacher-single.html">
                 <h4 class="card-title">John Doe</h4>
@@ -420,14 +420,6 @@
   <div class="copyright py-4 bg-footer">
     <div class="container">
       <div class="row">
-        <div class="col-sm-7 text-sm-left text-center">
-          <p class="mb-0">Copyright
-            <script>
-              var CurrentYear = new Date().getFullYear()
-              document.write(CurrentYear)
-            </script> 
-            © Theme By <a href="https://themefisher.com">themefisher.com</a></p> . All Rights Reserved.
-        </div>
         <div class="col-sm-5 text-sm-right text-center">
           <ul class="list-inline">
             <li class="list-inline-item"><a class="d-inline-block p-2" href="https://www.facebook.com/themefisher"><i class="ti-facebook text-primary"></i></a></li>
@@ -443,23 +435,23 @@
 <!-- /footer -->
 
 <!-- jQuery -->
-<script src="plugins/jQuery/jquery.min.js"></script>
+<script src="/jquery.min.js"></script>
 <!-- Bootstrap JS -->
-<script src="plugins/bootstrap/bootstrap.min.js"></script>
+<script src="/bootstrap.min.js"></script>
 <!-- slick slider -->
-<script src="plugins/slick/slick.min.js"></script>
+<script src="/slick.min.js"></script>
 <!-- aos -->
-<script src="plugins/aos/aos.js"></script>
+<script src="/aos.js"></script>
 <!-- venobox popup -->
-<script src="plugins/venobox/venobox.min.js"></script>
+<script src="/venobox.min.js"></script>
 <!-- mixitup filter -->
-<script src="plugins/mixitup/mixitup.min.js"></script>
+<script src="/mixitup.min.js"></script>
 <!-- google map -->
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcABaamniA6OL5YvYSpB3pFMNrXwXnLwU&libraries=places"></script>
-<script src="plugins/google-map/gmap.js"></script>
+<script src="/gmap.js"></script>
 
 <!-- Main Script -->
-<script src="js/script.js"></script>
+<script src="/script.js"></script>
 
 </body>
 </html>
