--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
   <link rel="stylesheet" href="/venobox.css">
 
   <!-- Main Stylesheet -->
-  <link href="css/style.css" rel="stylesheet">
+  <link href="/style.css" rel="stylesheet">
   
   <!--Favicon-->
   <link rel="shortcut icon" href="/favicon.ico" type="/x-icon">
